--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body {
+        body {
 			background-color:#800000;
 			color:white;
 		}
@@ -22,3 +22,23 @@ body {
 		  margin-left: -0.36em;
 		  margin-right: -0.15em;
 		}
+h1 {
+    text-align:center;
+}
+
+#title {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+
+#body {
+    font-family: monospace;
+}
+
+#authors {
+    font-size: 18px;
+}
+
+a {
+    color: #00FFFF;
+}
