--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 #body {
-    font-family: monospace;
+    font-family: 'Courier New', monospace;
 }
 
 #authors {
@@ -41,4 +41,9 @@ h1 {
 
 a {
     color: #00FFFF;
+}
+
+body {
+    margin-left: 50px;
+    margin-bottom: 50px;
 }
