--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,14 @@ body {
 #spec {
     font-style: italic;
 }
+
+input[type="text"] {
+    border: 0;
+    height: 25px;
+    margin-right: 10px;
+    background: rgba(255,255,255,0.9)
+}
+
+input[type="text"]:hover {
+    background: #FFFFFF;
+}
