--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,8 @@ input[type="text"] {
     border: 0;
     height: 25px;
     margin-right: 10px;
-    background: rgba(255,255,255,0.9)
+    background: rgba(255,255,255,0.9);
+    font-family: 'Courier New', monospace;
 }
 
 input[type="text"]:hover {
